(#477) Uploads Artifacts after Build
This commit should result in the main artifacts being published to AppVeyor after the build has completed.

This will allow folk to use them for testing, and the like.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,3 +17,7 @@ branches:
     - master
     - /release/.*/
     - /hotfix/.*/
+
+artifacts:
+  - path: 'C:\projects\boxstarter\BuildArtifacts\Boxstarter.*.zip'
+  - path: 'C:\projects\boxstarter\BuildArtifacts\Boxstarter.*.nupkg'
